# TernaryPlot-Gtk

./: AUTHORS  README  configure.ac
src/: Makefile.am  main.c  ternaryplot.c  ternaryplot.h
